--- a/styles/style.css
+++ b/styles/style.css
@@ -4,17 +4,27 @@ html {
   box-sizing: border-box;
   font-size: 16px;
 }
-  
-*, *:before, *:after {
+
+*,
+*:before,
+*:after {
   box-sizing: inherit;
 }
-  
-body, h1, h2, h3, h4, h5, h6, p, ol, ul {
+
+body,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+ol,
+ul {
   margin: 0;
   padding: 0;
   font-weight: lighter;
 }
-
 
 /*  DO NOT REMOVE - Styling for the label showing the viewport width */
 .viewport-dimensions {
@@ -27,7 +37,7 @@ body, h1, h2, h3, h4, h5, h6, p, ol, ul {
   padding: 5px 8px;
   font-size: 14px;
 }
-  
+
 /* STYLES */
 
 /*  Fonts */
@@ -175,5 +185,68 @@ header {
 .btn-blue {
   background-color: #007bff;
 }
-  
+
 /* Write your CSS below */
+
+/* ----- ITERATION 1 760px ----- */
+
+@media screen and (max-width: 760px) {
+  .navbar {
+    flex-direction: column;
+  }
+
+  .navbar li {
+    width: auto;
+    border-right: 0px;
+    border-bottom: 1px solid #fff;
+  }
+
+  .main-article {
+    flex-direction: column;
+  }
+
+  .main-article img {
+    width: 100%;
+  }
+
+  .main-article .image {
+    width: 100%;
+  }
+
+  .main-article .content {
+    width: 100%;
+  }
+
+  .articles-container {
+    flex-direction: column;
+  }
+
+  .article {
+    width: 100%;
+    margin-bottom: 20px;
+  }
+}
+
+/* ----- ITERATION 2 760px ----- */
+
+@media screen and (min-width: 761px), (max-width: 1024px) {
+  .navbar {
+    flex-direction: row;
+    justify-content: space-evenly;
+  }
+
+  .navbar li {
+    width: 25%;
+    height: 40px;
+  }
+
+  .articles-container {
+    flex-direction: flex-wrap;
+    padding: 0px;
+  }
+
+  .article {
+    width: 45%;
+    margin: 20px;
+  }
+}
